# src/main/java/com/tvj/internaltool/dto/req/MemberUpdateReqDto.java
@@ -1,0 +1,29 @@
+package com.tvj.internaltool.dto.req;
+
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.Size;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Setter
+@Getter
+public class MemberUpdateReqDto {
+    
+    @NotBlank
+    @Size(max = 20)
+    private String username;
+    
+    @NotBlank
+    private String firstName;
+    
+    @NotBlank
+    private String lastName;
+    
+    @NotBlank
+    private String titleId;
+    
+    @NotBlank
+    private String email;
+    
+}
